--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "dev": "nodemon",
     "prettier": "pretty-quick",
-    "start": "node build/tap-vote-server/index.js"
+    "start": "node build/tap-vote-api/index.js"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +32,7 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "ts-node": "^9.1.1",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   },
   "repository": {
